fixed some sections that have small text on mobile

--- a/code/marketingPages/styles.css
+++ b/code/marketingPages/styles.css
@@ -157,7 +157,8 @@ button.slight-rounding {
 }
 
 .benefit-container.dark,
-.other-benefits-container {
+.other-benefits-container,
+.main-photo-container {
     background: #161617;
 }
 
